modification de la structure du projet